k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-worker
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-worker
  template:
    metadata:
      labels:
        app: order-worker
    spec:
      containers:
        - name: order-worker
          image: gpterruya/order-worker:latest
          imagePullPolicy: Always
