k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce
spec:
  ingressClassName: nginx
  rules:
    - host: devops.local
      http:
        paths:
          - path: /catalog
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80

          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-web
                port:
                  number: 80
